fix(ui): progress spinner was off center

--- a/src/app/plex/plex.component.scss
+++ b/src/app/plex/plex.component.scss
@@ -14,21 +14,10 @@ mat-card {
   width: 100%
 }
 
-.mat-row:nth-child(even){
-  // background-color: #f2f2f2;
-}
-
-.mat-row:nth-child(odd){
-  // background-color: white;
-}
-
 table {
   width: 100%
 }
 
 mat-spinner {
-  float:left;
-  width: 24px;
-  height: 24px;
-  margin: 5px 10px 0px 0px;
+  margin: auto;
 }
